--- a/index.qmd
+++ b/index.qmd
@@ -36,23 +36,59 @@ format:
         <tbody>
             <tr style="transition: background-color 0.3s ease;">
                 <td style="padding: 10px 15px; border: 1px solid #ddd;">Sesión 1</td>
-                <td style="padding: 10px 15px; border: 1px solid #ddd;">Introducción al Mundo de la Visión por Computadora</td>
-                <td style="padding: 10px 15px; border: 1px solid #ddd;">Una visión general de la visión por computadora y su impacto en el mundo real.</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">1 piloto</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">todos</td>
             </tr>
             <tr style="transition: background-color 0.3s ease;">
                 <td style="padding: 10px 15px; border: 1px solid #ddd;">Sesión 2</td>
-                <td style="padding: 10px 15px; border: 1px solid #ddd;">Profundizando en la Segmentación de Imágenes</td>
-                <td style="padding: 10px 15px; border: 1px solid #ddd;">Exploración de la segmentación de imágenes y propiedades de los materiales.</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">2 generalidades imágenes</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;"><span style="color: red;">Hoover</span></td>
             </tr>
             <tr style="transition: background-color 0.3s ease;">
                 <td style="padding: 10px 15px; border: 1px solid #ddd;">Sesión 3</td>
-                <td style="padding: 10px 15px; border: 1px solid #ddd;">Navegando RGB+D Imaging y Comprensión de Escenas</td>
-                <td style="padding: 10px 15px; border: 1px solid #ddd;">Comprensión de las imágenes RGB en detalle y su aplicación en la comprensión de escenas.</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">3 espectral</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;"><span style="color: red;">Cristian y Miguel</span></td>
             </tr>
-            <!-- Continuar con las demás sesiones según se requiera -->
+            <tr style="transition: background-color 0.3s ease;">
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">Sesión 4</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">4 depth pasivo</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;"><span style="color: red;">Ramiro y Miguel</span></td>
+            </tr>
+            <tr style="transition: background-color 0.3s ease;">
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">Sesión 5</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">5 depth activo</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;"><span style="color: red;">Ramiro y Hoover</span></td>
+            </tr>
+            <tr style="transition: background-color 0.3s ease;">
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">Sesión 6</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">6 deep learning crash => projects definition</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;"><span style="color: red;">Fabian y Hoover</span></td>
+            </tr>
+            <tr style="transition: background-color 0.3s ease;">
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">Sesión 7</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">7 segmentación</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;"><span style="color: red;">Fabian y Cristian</span></td>
+            </tr>
+            <tr style="transition: background-color 0.3s ease;">
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">Sesión 8</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">8 thermal imaging</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;"><span style="color: red;">Oscar y Hoover</span></td>
+            </tr>
+            <tr style="transition: background-color 0.3s ease;">
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">Sesión 9</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">9 tinyml</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;"><span style="color: red;">Fabian y Oscar</span></td>
+            </tr>
+            <tr style="transition: background-color 0.3s ease;">
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">Sesión 10</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">10 projects</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;"></td>
+            </tr>
         </tbody>
     </table>
 </section>
+
+
 
 <section class="join">
     <h3>Participa en el Semillero</h3>
