--- a/index.qmd
+++ b/index.qmd
@@ -3,17 +3,72 @@ title: Hands-on Computer Vision
 sidebar: false
 format:
   html:
-    toc: false
+    toc: true
     page-layout: full
-
-
-
 
 ---
 
+<style>
+    img:hover {
+        opacity: 1;
+	    -webkit-animation: flash 1s;
+	    animation: flash 1s;
+    }
+
+    @-webkit-keyframes flash {
+	    0% {
+	    	opacity: .4;
+	    }
+	    100% {
+	    	opacity: 1;
+	    }
+    }
+    @keyframes flash {
+	    0% {
+		    opacity: .4;
+	    }
+	    100% {
+		    opacity: 1;
+	    }
+    }
+
+
+
+    table tr:hover {
+        background-color: #e6f7ff;
+    }
+
+    .button:hover {
+        background-color: #e6f7ff;
+        color: black;
+        transition:
+    }
+
+    .professor-section {
+        display: flex;
+        align-items: center;
+        margin-top: 20px;
+        text-align: justify;
+    }
+
+    .professor-image {
+        width: 300px; /* Puedes ajustar el tamaño según sea necesario */
+        margin-right: 20px;
+        border-radius: 8px; /* Añadido para bordes redondeados en la imagen */
+    }
+
+    .professor-description {
+        max-width: 600px; /* Puedes ajustar el ancho máximo según sea necesario */
+    }
+
+</style>
+
+
+<img src="/docs/images/ci.jpg" alt="" width="500" style="display: block; margin: auto;">
 <header>
     <h2>De los Conceptos al Código</h2>
 </header>
+
 
 <main>
 <section class="introduction">
@@ -37,7 +92,7 @@ format:
             <tr style="transition: background-color 0.3s ease;">
                 <td style="padding: 10px 15px; border: 1px solid #ddd;">Sesión 1</td>
                 <td style="padding: 10px 15px; border: 1px solid #ddd;">1 piloto</td>
-                <td style="padding: 10px 15px; border: 1px solid #ddd;">todos</td>
+                <td style="padding: 10px 15px; border: 1px solid #ddd;">Todos</td>
             </tr>
             <tr style="transition: background-color 0.3s ease;">
                 <td style="padding: 10px 15px; border: 1px solid #ddd;">Sesión 2</td>
@@ -97,6 +152,18 @@ format:
     </p>
     <a class="button" href="inscripcion.qmd">Inscribirse Ahora</a>
 </section>
+<h2>Realizado por:</h2>
+<section class="professor-section">
+    <img src="/docs/images/profesor.png" alt="Foto del Profesor" class="professor-image">
+    <section class="professor-description">
+        <h3>Hoover Fabian Rueda Chacón</h3>
+        <p>
+            Graduado como ingeniero de Sistemas y como magíster en Ingeniería de Sistemas e Informática de la Universidad Industrial de Santander, Bucaramanga, Colombia, en 2009 y 2012. Recibió los títulos de Magíster y Doctor en Ingeniería Eléctrica y Computación de la Universidad de Delaware, Newark, EE. UU., en 2015 y 2017, patrocinado por Fulbright-Colciencias. De 2021 a 2022, fue Asociado Postdoctoral en el Departamento de Ingeniería Eléctrica y Computación de la Universidad de Boston, EE. UU.. Sus áreas principales de investigación son: procesamiento de imágenes, algoritmos, óptica computacional y optimización numérica.
+        </p>
+    </section>
+</section>
+
+
 </main>
 
 <footer>
