changes after feedback 2

--- a/index.qmd
+++ b/index.qmd
@@ -120,35 +120,35 @@ format:
 <section class="student-section">
     <section class="student-container">
         <img src="/docs/images/fabian.png" alt="" class="student-image">
-        <section class="professor-description">
+        <section class="student-description">
             <h3>Nelson Fabian Pérez Pérez</h3>
             <p>Estudiante de Ingenieria de Sistemas e Informática</p>
         </section>
     </section>
     <section class="student-container">
         <img src="/docs/images/cristian.jpg" alt="" class="student-image">
-        <section class="professor-description">
+        <section class="student-description">
             <h3>Cristhian Camilo Rey Rueda</h3>
             <p>Estudiante de Ingenieria de Sistemas e Informática</p>
         </section>
     </section>
     <section class="student-container">
         <img src="/docs/images/ramiro.jpeg" alt="" class="student-image">
-        <section class="professor-description">
+        <section class="student-description">
             <h3>Ramiro Santiago Ávila Chacón</h3>
             <p>Estudiante de Ingenieria de Sistemas e Informática</p>
         </section>
     </section>
     <section class="student-container">
         <img src="/docs/images/miguel.png" alt="" class="student-image">
-        <section class="professor-description">
+        <section class="student-description">
             <h3>Miguel Ángel Molina Garzón</h3>
             <p>Estudiante de Ingenieria de Sistemas e Informática</p>
         </section>
     </section>
     <section class="student-container">
         <img src="/docs/images/profesor5.png" alt="" class="student-image">
-        <section class="professor-description">
+        <section class="student-description">
             <h3>Oscar</h3>
             <p>Estudiante de Ingenieria de Sistemas e Informática</p>
         </section>
@@ -160,5 +160,5 @@ format:
 </main>
 
 <footer>
-    <small>Para consultas, contacta a <a href="mailto:contacto@handson-cv.edu">contacto@handson-cv.edu</a>.</small>
+    <small>Para consultas, contacta a <a href="hfarueda@uis.edu.co">contacto@handson-cv.edu</a>.</small>
 </footer>
