--- a/Sesiones/Sesion8/Spectral_Segmentacion.ipynb
+++ b/Sesiones/Sesion8/Spectral_Segmentacion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<image src=\"\" width=100%>"
+    "<image src=\"https://i.imgur.com/r2668pf.png\" width=100%>"
    ]
   },
   {
