--- a/Sesiones/Sesion8/Spectral_Segmentacion.ipynb
+++ b/Sesiones/Sesion8/Spectral_Segmentacion.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color='#4C5FDA'>**Instalamos paquetes y librerias**</font>\n"
+    "## <font color='#4C5FDA'>**Instalamos paquetes y librerias**</font>\n"
    ]
   },
   {
@@ -63,6 +63,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color='#4C5FDA'>**Descargamos la imagen hiperspectral y la libreria de firmas espectrales**</font>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
@@ -89,13 +96,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color='#4C5FDA'>**Cargamos el cubo espectral**</font>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#load mat with scipy\n",
-    "\n",
     "file = mat73.loadmat('./8.mat')\n",
     "cube = file[\"rad\"]\n",
     "\n",
@@ -131,6 +143,13 @@
    ],
    "source": [
     "plt.imshow(cube[:,:,0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color='#4C5FDA'>**Metodos utiles para transformar una imagen hiperspectral a rgb**</font>\n"
    ]
   },
   {
@@ -236,6 +255,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <font color='#4C5FDA'>**pasamos de 31 bandas a 3 bandas**</font>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
@@ -300,6 +326,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <font color='#4C5FDA'>**Cargamos la libreria de firmas espectrales**</font>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -328,6 +361,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <font color='#4C5FDA'>**Pre-procesamos las firmas**</font>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -341,10 +381,6 @@
     }
    ],
    "source": [
-    "# data preprocessing\n",
-    "\n",
-    "# remove rows with objectype == 'Color Swatch'\n",
-    "\n",
     "spectraldb = spectraldb[spectraldb['ObjectType'] != 'Color Swatch']\n",
     "print(spectraldb.shape)"
    ]
@@ -823,8 +859,15 @@
     }
    ],
    "source": [
-    "wv_int = np.array(list(range(420,730,10)))\n",
+    "wv_int = np.array(list(range(420,730,10))) # desde la longitud de onda 420 a la 730 cada 10 nm\n",
     "wv_int.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color='#4C5FDA'>**Plot de todas las firmas espectrales de materiales**</font>\n"
    ]
   },
   {
@@ -876,6 +919,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <font color='#4C5FDA'>**Plot de firmas separado por material**</font>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
@@ -909,7 +959,7 @@
     }
    ],
    "source": [
-    "# for each material plot his signatures\n",
+    "\n",
     "fig, ax = plt.subplots(3, 4, figsize=(10, 5))\n",
     "\n",
     "for i,material in enumerate(materials_dict.keys()):\n",
@@ -921,7 +971,6 @@
     "\n",
     "    signatures_mat = pandas.concat([material_df, material_df_]).drop_duplicates().reset_index()\n",
     "\n",
-    "    #plot signatures\n",
     "    print(material, signatures_mat.shape[0])\n",
     "\n",
     "    for row in signatures_mat.itertuples():\n",
@@ -933,9 +982,7 @@
     "        ax[i//4, i%4].set_xlim([400, 700])\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "\n"
+    "plt.show()\n"
    ]
   },
   {
@@ -957,6 +1004,13 @@
    "source": [
     "materials_matrix = np.array(data)\n",
     "materials_matrix.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color='#4C5FDA'>**Calculamos los angulos espectrales para cada material con respecto a cada pixel en el cubo**</font>\n"
    ]
   },
   {
