--- a/Sesiones/Sesion8/Spectral_Segmentacion.ipynb
+++ b/Sesiones/Sesion8/Spectral_Segmentacion.ipynb
@@ -218,7 +218,7 @@
     "\n",
     "class ColourSystem:\n",
     "\n",
-    "    def __init__(self, start=380, end=750, num=100, cs='sRGB'):\n",
+    "    def __init__(self, start=None, end=None, num=None, cs='sRGB'):\n",
     "\n",
     "        # Chromaticities\n",
     "        bands = np.linspace(start=start, stop=end, num=num)*10\n",
@@ -279,8 +279,8 @@
    ],
    "source": [
     "color_space = \"sRGB\"\n",
-    "start, end = 400, 700 \n",
-    "number_bands = 31\n",
+    "start, end = None, None\n",
+    "number_bands = None\n",
     "\n",
     "cs = ColourSystem(cs=color_space, start=start, end=end, num=number_bands)\n",
     "\n",
@@ -859,7 +859,7 @@
     }
    ],
    "source": [
-    "wv_int = np.array(list(range(420,730,10))) # desde la longitud de onda 420 a la 730 cada 10 nm\n",
+    "wv_int = np.array(list(range(None, None, None))) # desde la longitud de onda 420 a la 730 cada 10 nm\n",
     "wv_int.shape"
    ]
   },
@@ -1021,7 +1021,7 @@
    "source": [
     "import spectral\n",
     "\n",
-    "result_sam = spectral.algorithms.spectral_angles(cube,materials_matrix) "
+    "result_sam = spectral.algorithms.spectral_angles(None,None) "
    ]
   },
   {
@@ -1103,7 +1103,7 @@
     }
    ],
    "source": [
-    "plot_nearest_signature(a,340,340)"
+    "plot_nearest_signature(None,None,None)"
    ]
   },
   {
@@ -1181,8 +1181,8 @@
     "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
     "\n",
     "colors = ['olive','red', 'green', 'yellow', 'pink', 'orange', 'purple', 'brown', 'gray', 'cyan']\n",
-    "vmin = 0\n",
-    "vmax = len(colors)\n",
+    "vmin = None\n",
+    "vmax = None\n",
     "cmap = matplotlib.colors.ListedColormap(colors)\n",
     "\n",
     "\n",
@@ -1264,7 +1264,7 @@
    "source": [
     "from skimage import data, segmentation, color\n",
     "\n",
-    "labels_slic = segmentation.slic(img_rgb, compactness=10, n_segments=150)\n",
+    "labels_slic = segmentation.slic(img_rgb, compactness=None, n_segments=None)\n",
     "superpixels_slic = color.label2rgb(labels_slic, img_rgb, kind='avg')\n",
     "\n",
     "# show original image, slic, ground truth\n",
@@ -1305,13 +1305,13 @@
     "     superpixel = superpixel_list[i]\n",
     "     objects_ = []\n",
     "     for j in range(len(superpixel[0])):\n",
-    "          x = superpixel[0][j]\n",
-    "          y = superpixel[1][j]\n",
+    "          x = None\n",
+    "          y = None\n",
     "          objects_.append(segmentation_materials[x,y])\n",
     "     max_object = max(set(objects_), key=objects_.count)\n",
     "     for j in range(len(superpixel[0])):\n",
-    "          x = superpixel[0][j]\n",
-    "          y = superpixel[1][j]\n",
+    "          x = None\n",
+    "          y = None\n",
     "          segmentation_materials[x,y] = max_object\n",
     "\n",
     "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
