--- a/sesiones/sesion1/Exercise1.ipynb
+++ b/sesiones/sesion1/Exercise1.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Tapr16/Hands-on-Computer-Vision/blob/main/sesiones/sesion1/Exercise1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "biK2H-MfIiar"
       },
       "source": [
@@ -20,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "urKcJDhQIiav"
       },
@@ -36,15 +46,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "FG-Qc7_mIiaw"
       },
       "outputs": [],
       "source": [
         "# @title Rellena estos campos\n",
-        "nombre = \"\" # @param {type:\"string\"}\n",
-        "codigo = \"\" # @param {type:\"string\"}"
+        "nombre = \"Thomas Perez\" # @param {type:\"string\"}\n",
+        "codigo = \"2221906\" # @param {type:\"string\"}"
       ]
     },
     {
@@ -129,7 +139,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
