--- a/sesiones/sesion1/Exercise1.ipynb
+++ b/sesiones/sesion1/Exercise1.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "urKcJDhQIiav"
       },
@@ -36,15 +36,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "FG-Qc7_mIiaw"
       },
       "outputs": [],
       "source": [
         "# @title Rellena estos campos\n",
-        "nombre = \"\" # @param {type:\"string\"}\n",
-        "codigo = \"\" # @param {type:\"string\"}"
+        "nombre = \"Johan Sebastián Diaz Meza\" # @param {type:\"string\"}\n",
+        "codigo = \"2221905\" # @param {type:\"string\"}"
       ]
     },
     {
