fix: add rawpy download

--- a/sesiones/sesion2/Sesion2_1_Demosaicking.ipynb
+++ b/sesiones/sesion2/Sesion2_1_Demosaicking.ipynb
@@ -49,14 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "7b5a6461",
    "metadata": {
     "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
+    "%%capture\n",
     "# @title librerías\n",
+    "\n",
+    "!pip install -q rawpy\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
@@ -83,18 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "bf5800ae",
    "metadata": {},
    "outputs": [],
    "source": [
     "# @title Seleeciona el archivo raw\n",
-    "raw_file = \"raw_Canon.CR2\"  # @param {type:\"string\"}"
+    "raw_file = \"raw.CR2\"  # @param {type:\"string\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "b978f92a",
    "metadata": {},
    "outputs": [
@@ -102,17 +105,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2025-03-10 11:42:32--  https://raw.githubusercontent.com/semilleroCV/Hands-on-Computer-Vision/refs/heads/2024/Sesiones/Sesion2/Imagenes/raw_Canon.CR2\n",
+      "--2025-03-10 12:31:19--  https://raw.githubusercontent.com/semilleroCV/Hands-on-Computer-Vision/refs/heads/2024/Sesiones/Sesion2/Imagenes/raw.CR2\n",
       "Cargado certificado CA '/etc/ssl/certs/ca-certificates.crt'\n",
-      "Resolviendo raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.111.133, ...\n",
-      "Conectando con raw.githubusercontent.com (raw.githubusercontent.com)[185.199.108.133]:443... conectado.\n",
+      "Resolviendo raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.111.133, ...\n",
+      "Conectando con raw.githubusercontent.com (raw.githubusercontent.com)[185.199.110.133]:443... conectado.\n",
       "Petición HTTP enviada, esperando respuesta... 200 OK\n",
-      "Longitud: 23744488 (23M) [application/octet-stream]\n",
-      "Grabando a: «raw_Canon.CR2»\n",
+      "Longitud: 10179236 (9,7M) [application/octet-stream]\n",
+      "Grabando a: «raw.CR2»\n",
       "\n",
-      "raw_Canon.CR2       100%[===================>]  22,64M  15,9MB/s    en 1,4s    \n",
+      "raw.CR2             100%[===================>]   9,71M  3,13MB/s    en 3,1s    \n",
       "\n",
-      "2025-03-10 11:42:33 (15,9 MB/s) - «raw_Canon.CR2» guardado [23744488/23744488]\n",
+      "2025-03-10 12:31:23 (3,13 MB/s) - «raw.CR2» guardado [10179236/10179236]\n",
       "\n"
      ]
     }
@@ -152,7 +155,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📖 Leyendo imagen .RAW ...\n",
+      "📖 Leyendo imagen .RAW ...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "📏 Tamaño de la imagen: (2622, 3948)\n"
      ]
     },
@@ -168,7 +177,7 @@
     }
    ],
    "source": [
-    "with rawpy.imread(\"raw.CR2\") as raw:\n",
+    "with rawpy.imread(raw_file) as raw:\n",
     "    print('📖 Leyendo imagen .RAW ...')\n",
     "    image = raw.raw_image.copy()\n",
     "\n",
@@ -360,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "429b951a",
    "metadata": {},
    "outputs": [
@@ -487,7 +496,7 @@
    ],
    "source": [
     "# Comparando contra la imagen original\n",
-    "with rawpy.imread('raw.CR2') as raw:\n",
+    "with rawpy.imread(raw_file) as raw:\n",
     "    print('Reading image raw data...')\n",
     "    rgb2 = raw.postprocess(use_camera_wb=True)\n",
     "\n",
