remove solutions on demosaicking

--- a/sesiones/sesion2/Sesion2_1_Demosaicking.ipynb
+++ b/sesiones/sesion2/Sesion2_1_Demosaicking.ipynb
@@ -231,7 +231,7 @@
    "id": "bff2229c",
    "metadata": {},
    "source": [
-    "## 🌈 **3. Hagamos demosaicking** <a name=\"tema3\"></a> 🎨\n",
+    "## 🌈 **2. Hagamos demosaicking** <a name=\"tema3\"></a> 🎨\n",
     "\n",
     "**Objetivo:** Separar la imagen en sus canales RGB.\n",
     "\n",
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bf31ccd1",
    "metadata": {},
    "outputs": [
@@ -337,16 +337,10 @@
     "\n",
     "\n",
     "def get_cfa_channel(i, j):\n",
-    "    if i % 2 == 0 and j % 2 == 0:\n",
-    "        return RED\n",
-    "    elif i % 2 == 1 and j % 2 == 1:\n",
-    "        return BLUE\n",
-    "    else:\n",
-    "        return GREEN\n",
+    "    ...\n",
     "\n",
-    "## Ejercico\n",
     "def get_cfa_mask(shape):\n",
-    "    return np.array([[get_cfa_channel(i, j) for j in range(shape[1])] for i in range(shape[0])])\n",
+    "    ...\n",
     "\n",
     "cfa_mask = get_cfa_mask(image.shape)\n",
     "\n",
@@ -369,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "429b951a",
    "metadata": {},
    "outputs": [
@@ -388,10 +382,10 @@
     "# 🏆 Escribe aquí el código para completar los valores faltantes:\n",
     "\n",
     "#Filtro lineal para el canal verde\n",
-    "G_KERNEL = np.array([[0,1],[1,0]]) / 4\n",
+    "G_KERNEL = ...\n",
     "\n",
     "#Filtro lineal para los canales azul y rojo (Note la diferencia)\n",
-    "RB_KERNEL = np.array([[1, 0, 1], [0, 0, 0], [1, 0, 1]]) / 4 \n",
+    "RB_KERNEL = ...\n",
     "\n",
     "r = convolve(r, RB_KERNEL, mode='nearest')\n",
     "b = convolve(b, RB_KERNEL, mode='nearest')\n",
@@ -421,12 +415,12 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## 🎯 **4. Correcciones de color** <a name=\"tema4\"></a> 🌈"
+    "## 🎯 **3. Correcciones de color** <a name=\"tema4\"></a> 🌈"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "fe083ec1",
    "metadata": {},
    "outputs": [
@@ -446,7 +440,7 @@
     "gamma = 2.2 # 🛠️ Puedes cambiar este valor para ver cómo afecta a la imagen\n",
     "\n",
     "# Apilamos los canales rojo, verde y azul para formar una imagen RGB\n",
-    "rgb = np.stack([r, g, b], axis=2).astype(np.float64)\n",
+    "rgb = ...  # 🛠️ Completar la función para apilar los canales\n",
     "\n",
     "# # Normalización independiente por canal\n",
     "min_val = np.min(rgb, axis=(0, 1))  # Mínimo por canal\n",
